# freshapi

./: .env  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  FRONTEND_INTEGRATION.md  GEMINI.md  GRAPHQL_TESTING_GUIDE.md  PROJECTMIND_IMPLEMENTATION_COMPLETE.md  PROJECTMIND_IMPLEMENTATION_PLAN.md  README.md  TASK_SYSTEM_INTEGRATION.md  docker-compose.yml  nixpacks.toml  railway.toml
migration/: Cargo.toml  check_permissions.sql
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20250104_000001_create_projects_and_tasks.rs  m20250104_000002_seed_task_permissions.rs  m20250119_000001_create_projectmind_system.rs  m20250726_225951_seed_admin_user.rs  m20250728_121007_add_refresh_tokens_to_user.rs  m20250728_123504_create_invitations_table.rs  m20250728_123616_add_invitation_token_to_user.rs  m20250801_000001_create_rbac_tables.rs  m20250801_000002_seed_rbac_data.rs  m20250801_000003_add_role_to_invitations.rs  m20250808_000001_add_task_recurrence_and_activities.rs  m20250820_025047_make_created_by_nullable_in_project_context_categories.rs  m20250820_215425_add_context_id_to_tasks.rs  rbac_helpers.rs
scripts/: deploy.sh
src/: lib.rs  main.rs
src/auth/: guards.rs  jwt.rs  middleware.rs  mod.rs  permissions.rs  types.rs
src/entities/: activity_comment.rs  context_type.rs  email_attachment.rs  email_context.rs  invitation.rs  mod.rs  permission.rs  prelude.rs  project.rs  project_context.rs  project_context_category.rs  project_member.rs  resource.rs  role.rs  role_permission.rs  task.rs  user.rs  user_permission.rs
src/graphql/: dataloader.rs  (+5 more)
(+16 files in other folders)
