[package]
name = "freshapi"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-graphql = "7.0.17"
async-graphql-axum = "7.0.17"
axum = "0.8.4"
bcrypt = "0.17.0"
chrono = "0.4.41"
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
reqwest = "0.12.22"
resend-rs = "0.15.0"
sea-orm = "1.1.14"
sea-orm-migration = "1.1.14"
serde = "1.0.219"
serde_json = "1.0.141"
thiserror = "2.0.12"
tokio = "1.47.0"
tower-http = "0.6.6"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = "1.17.0"
