[package]
name = "freshapi"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "freshapi"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
async-graphql-axum = "7.0.17"
axum = "0.8.4"
bcrypt = "0.17.0"
chrono = "0.4.41"
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
reqwest = "0.12.22"
resend-rs = "0.15.0"
sea-orm = { version = "1.1.14", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = "1.1.14"
serde = "1.0.219"
serde_json = "1.0.141"
thiserror = "2.0.12"
tokio = { version = "1.47.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
async-graphql = { version = "7.0.17", features = ["uuid", "chrono", "dataloader"] }
strum = { version = "0.26", features = ["derive"] }
rust_decimal = { version = "1.36", features = ["serde"] }
